# gvox_engine

./: CMakeLists.txt  vcpkg.json
cmake/: ispc.cmake  package.cmake
src/: voxel_app.cpp  voxel_app.hpp
src/application/: input.inl  player.cpp  settings.inl  ui.cpp
src/renderer/: postprocessing.inl  postprocessing.raster.glsl  renderer.cpp  rt.glsl  trace_primary.comp.glsl  trace_primary.inl  trace_primary.rt.glsl  trace_secondary.comp.glsl  trace_secondary.inl  trace_shadow.rt.glsl
src/renderer/atmosphere/: convolve_cube.comp.glsl  sky.comp.glsl  sky.glsl  sky.inl  sky_utils.glsl
src/renderer/kajiya/: blur.comp.glsl  blur.inl  calculate_histogram.comp.glsl  calculate_histogram.inl  calculate_reprojection_map.comp.glsl  calculate_reprojection_map.inl  downscale.comp.glsl  downscale.inl  ircache.cpp  ircache.inl  light_gbuffer.comp.glsl  light_gbuffer.inl  prefix_scan.inl  rtdgi.inl  rtr.inl  shadow_denoiser.comp.glsl  shadow_denoiser.inl  ssao.comp.glsl  ssao.inl  taa.inl
src/renderer/kajiya/inc/: brdf_lut.glsl  camera.glsl  color.glsl  gbuffer.glsl  math_const.glsl  rt.glsl  safety.glsl  sh.glsl
src/renderer/kajiya/ircache/: ircache_constants.glsl  ircache_grid.glsl  ircache_trace_common.inc.glsl  ircache_validate.comp.glsl  ircache_validate.rt.glsl  lookup.glsl  prepare_trace_dispatch_args.comp.glsl  reset_entry.comp.glsl  sum_up_irradiance.comp.glsl  trace_accessibility.comp.glsl  trace_accessibility.rt.glsl  trace_irradiance.comp.glsl  trace_irradiance.rt.glsl
src/renderer/kajiya/rtdgi/: diffuse_trace_common.inc.glsl  diffuse_validate.comp.glsl  diffuse_validate.rt.glsl  fullres_reproject.comp.glsl  restir_resolve.comp.glsl  restir_spatial.comp.glsl  restir_temporal.comp.glsl  rtdgi_restir_settings.glsl  spatial_filter.comp.glsl  temporal_filter.comp.glsl  temporal_validity_integrate.comp.glsl  trace_diffuse.comp.glsl  trace_diffuse.rt.glsl
src/renderer/kajiya/rtr/: blue_noise.glsl  reflection_trace_common.inc.glsl  reflection_validate.comp.glsl  reflection_validate.rt.glsl  resolve.comp.glsl  rtr_restir_temporal.comp.glsl  spatial_cleanup.comp.glsl  temporal_filter.comp.glsl  trace_reflection.comp.glsl  trace_reflection.rt.glsl
src/renderer/kajiya/taa/: filter_history.comp.glsl  filter_input.comp.glsl  filter_prob.comp.glsl  filter_prob2.comp.glsl  input_prob.comp.glsl  input_variance.comp.glsl  reproject_history.comp.glsl  taa.comp.glsl
src/utilities/: allocator.inl  async_pipeline_manager.hpp  gpu_context.cpp  gpu_context.hpp  gpu_task.hpp  math.cpp
src/utilities/gpu/: common.glsl  defs.glsl  math.glsl  normal.glsl
src/utilities/mesh/: voxelize.raster.glsl
src/voxels/: brushes.glsl  model.cpp  pack_unpack.glsl  voxel_world.inl  voxels.glsl
src/voxels/impl/: perframe.comp.glsl  trace.glsl  voxel_world.comp.glsl  voxel_world.cpp  voxel_world.inl  voxels.glsl  voxels.inl
src/voxels/min_impl/: voxel_world.cpp  voxel_world.inl  voxels.inl
src/voxels/particles/: common.inl  cube.raster.glsl  particle.glsl  perframe.comp.glsl  splat.raster.glsl  voxel_particles.inl
src/voxels/particles/fire_particle/: fire_particle.glsl  fire_particle.inl  sim.comp.glsl
src/voxels/particles/flower/: flower.glsl  flower.inl  sim.comp.glsl
src/voxels/particles/grass/: grass.glsl  grass.inl  sim.comp.glsl
(+6 files in other folders)
